# askmydocs-production-rag

./: .env.example  .gitignore  README.md  TestDoc.docx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
askmydocs/config/: env.py  settings.py
askmydocs/generate/: answer.py  citations.py
askmydocs/index/: bm25_store.py  chroma_store.py
askmydocs/ingest/: chunking.py  loaders.py  metadata.py
askmydocs/rerank/: cross_encoder.py
askmydocs/retrieve/: hybrid.py
datasets/ci_docs/: testdoc.md
datasets/golden/: golden.jsonl
scripts/: ask.py  ingest.py  query.py  run_eval.py  run_ragas.py
tests/: test_chunking.py
